--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <h1>Virtual Fashion Design Studio</h1>
 
-    <a href="https://example.com/demo" class="demo-link">Click here for the demo</a>
+    <a href="https://tarun-yegireddi.github.io/AccentureInnovation/assets/prototype.mp4" class="demo-link">Click here for the demo</a>
 
     <div class="image-container">
         <img src="assets/vrimage.webp" alt="Fashion Design 1">
